corrected alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,7 @@ body {
   padding: 0;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .app-container {
@@ -52,6 +52,7 @@ h1 {
   line-height: 1.1;
   color: #44624A;
   font-weight: bold;
+  margin-top: 275px;
   margin-bottom: 10px;
 }
 
